# server/out/swagger.json
@@ -3538,172 +3538,6 @@
         ]
       }
     },
-    "/v1/supporter/{id}": {
-      "get": {
-        "tags": [
-          "supporter"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Endpoint to get supporter details",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "_id": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "name": {
-                      "type": "string",
-                      "example": "string"
-                    },
-                    "user": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "country": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "organization": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "roles": {
-                      "type": "string",
-                      "example": "string"
-                    },
-                    "joinDate": {
-                      "type": "string",
-                      "example": "string"
-                    },
-                    "createdBy": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae4ffc348ed682"
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "example": "2024-02-17T07:50:12.025Z"
-                    },
-                    "updatedAt": {
-                      "type": "string",
-                      "example": "2024-02-17T07:50:12.025Z"
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      },
-      "put": {
-        "tags": [
-          "supporter"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "parameter_name",
-            "in": "body",
-            "description": "Endpoint to update a supporter",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "name": {
-                      "type": "string",
-                      "example": "string"
-                    },
-                    "country": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "organization": {
-                      "type": "string",
-                      "example": "65cd9d8d5cae5ffc348ed638"
-                    },
-                    "role": {
-                      "type": "string",
-                      "example": "string"
-                    },
-                    "joinDate": {
-                      "type": "string",
-                      "example": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "supporter"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      }
-    },
     "/v1/supporter/supporter-head": {
       "get": {
         "tags": [
@@ -4148,6 +3982,172 @@
                 "name": "main"
               }
             }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/v1/supporter/{id}": {
+      "get": {
+        "tags": [
+          "supporter"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Endpoint to get supporter details",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "user": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "country": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "organization": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "roles": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "joinDate": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "createdBy": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae4ffc348ed682"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2024-02-17T07:50:12.025Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2024-02-17T07:50:12.025Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "supporter"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "parameter_name",
+            "in": "body",
+            "description": "Endpoint to update a supporter",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "country": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "organization": {
+                      "type": "string",
+                      "example": "65cd9d8d5cae5ffc348ed638"
+                    },
+                    "role": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "joinDate": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "supporter"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
           }
         },
         "security": [
